--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  I have two older sisters, and two nephew 😃. In my spare time, I like to play League of Legends and Animal Crossing. I also like to watch TV shows like Supergirl, You, The Flash, Glee, etc. Some favorite artists include the Glee Cast, Demi Lovato and Darren Criss.</p>
       </div>
       <div class="col-md-5">
-        <img src="allenr6x6.jpg" alt="Roni Allen" width="400" height="400">
+        <img src="darren-criss.jpeg" alt="Roni Allen" width="400" height="400">
 
       </div>
     </div>
