--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="col-md-5">
         <img src="darren-criss.jpeg" alt="Darren Criss" width="600" height="400">
-        <img src="irelia.png" alt="favorite champion in League of Legends" width="300" height ="300">
+        <img src="Irelia.png" alt="favorite champion in League of Legends" width="300" height ="300">
 
       </div>
     </div>
