--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="col-md-5">
         <img src="darren-criss.jpeg" alt="Darren Criss" width="600" height="400">
         <img src="Irelia.png" alt="favorite champion in League of Legends" width="300" height ="300">
-
+        <img src="YouNetflix.jpeg" alt="You Netflix" width="300" height ="300">
       </div>
     </div>
  
