--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <h2 class="featurette-heading">A LITTLE ABOUT <span class="text-muted">ME.</span></h2>
         <p class="lead">Welcome to my Home page. I am a full time student at CSULB. I am currently studying Computer Science. I graduated from Cerritos HS. I chose Computer Science because I took it in high school and thought that it was cool. I hope that some day I can be a web developer or software developer. Any job relating to technology would be great since I grew up with it.
 
- I have two older sisters, and two nephew 😃. In my spare time, I like to play League of Legends and Animal Crossing. I also like to watch TV shows like Supergirl, You, The Flash, Glee, etc. Some favorite artists include the Glee Cast, Demi Lovato and Darren Criss.</p>
+ I have two older sisters, and two nephews 😃. In my spare time, I like to play League of Legends and Animal Crossing. I also like to watch TV shows like Supergirl, You, The Flash, Glee, etc. Some favorite artists include the Glee Cast, Demi Lovato and Darren Criss.</p>
       </div>
       <div class="col-md-5">
         <img src="darren-criss.jpeg" alt="Darren Criss" width="600" height="400">
         <img src="Irelia.png" alt="favorite champion in League of Legends" width="300" height ="300">
-        <img src="YouNetflix.jpeg" alt="You Netflix" width="300" height ="300">
+        <img src="YouNetflix.jpeg" alt="You Netflix" width="300" height ="300"style="vertical-align:middle;margin:0px 50px">
       </div>
     </div>
  
