--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
    <hr class="featurette-divider">    
     
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Created by <a href="mailto:kaleb.lee@student.csulb.edu">Kaleb Lee</a> -  <a href="https://www.instagram.com/kaleb._.lee02/" target="_blank">iG</a></p> <i class="fa fa-instagram" aria-hidden="true"></i>
-    <i class="fas fa-chalkboard-teacher" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i>
+  <p>Created by <a href="mailto:kaleb.lee@student.csulb.edu">Kaleb Lee</a> -  <a href="https://www.instagram.com/kaleb._.lee02/" target="_blank">iG</a></p> 
+    <i class="fa fa-instagram" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i>
 </div>
     </div>
 </body>
