--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="jumbotron text-center" style="margin-bottom:0">
     <h1>Student at CSULB</h1>
   <h3>Kaleb Lee - Computer Science student<i class="fas fa-university" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i></h3>
-
+<body style="background-color:powderblue;">
 </div>
 
 
