--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
    <hr class="featurette-divider">    
     
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Created by <a href="mailto:kaleb.lee@student.csulb.edu">Kaleb Lee</a> -  <a href="https://www.instagram.com/kaleb._.lee02/" target="_blank">iG</a></p> 
+  <p>Created by <a href="mailto:kaleb.lee@student.csulb.edu">Kaleb Lee</a> -  <a href="https://www.instagram.com/kaleb._.lee02/" target="_blank">iG</a> - <a href="https://open.spotify.com/playlist/32mT9b6ksDb478i4wm1KSx?si=8f62210fd029476a" target="_blank">Spotify</a></p> 
     <i class="fa fa-instagram" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i>
 </div>
     </div>
